# kr_attitude_eskf

./: .gitignore  CMakeLists.txt  plot_results.ipynb
.ipynb_checkpoints/: plot_results-checkpoint.ipynb
include/kr_attitude_eskf/: AttitudeESKF.hpp  AttitudeMagCalib.hpp
src/: kr_attitude_eskf.cpp
